<resources>
    <string name="app_name">CollegeConnect</string>
    <string name="coco">CoCo</string>
    <string name="app_description">Connect with students\n to learn about your dream colleges</string>
    <string name="google_maps_api_key">AIzaSyBsE6EN1QlJJOL-fwdaFdy4PBlALQdNhc8</string>
    <string name="title_search">Search</string>
    <string name="title_conversations">Conversations</string>
    <string name="title_profile">Profile</string>
    <string name="new_prompt">New?</string>
    <string name="get_started">Get started</string>
    <string name="signup">Sign up</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="login">Log-in</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="from">Hometown</string>
    <string name="high_school" translatable="false">High school</string>
    <string name="college">College</string>
    <string name="freshman">Freshman</string>
    <string name="sophomore">Sophomore</string>
    <string name="junior">Junior</string>
    <string name="senior">Senior</string>
    <string name="type_prompt">I\'m currently in…</string>
    <string name="name_prompt">My preferred name</string>
    <string name="high_school_prompt">My high school</string>
    <string name="college_prompt">My college</string>
    <string name="grade_prompt">I\'m currently a…</string>
    <string name="from_prompt">My hometown</string>
    <string name="academics_prompt">Academically, I\'m interested in…</string>
    <string name="extracurriculars_prompt">Outside of academics, I\'m interested in…</string>
    <string name="logout">Logout</string>
    <string name="hi_profile_name_prompt">Hi, I\'m</string>
    <string name="profile_from">From</string>
    <string name="profile_academics">Academic interests</string>
    <string name="profile_extracurriculars">Extracurricular interests</string>
    <string name="profile_highschool">High school</string>
    <string name="message_hint">Message…</string>
    <string name="college_search_prompt">Search for a college…</string>
    <string name="conversations_search_prompt">Search by name or school</string>
    <string name="start_conversation">Start conversation</string>
    <string name="conversation_started_message">started a conversation with you</string>
    <string name="start_convo_introduction_hint">Hi, I\'m…</string>
    <string name="start_convo_inquiries_hint">Can you tell me about…</string>
    <string name="no_college_students_message">Sorry!\nThere are no CoCo users who attend this college right now.</string>
    <string name="brief_intro_prompt">Give a brief introduction</string>
    <string name="inquiries_prompt">What do you want to talk about?</string>
    <string name="starting_conversation_with">Starting conversation with </string>
    <string name="send">Send</string>
    <string name="existing_conversation">Conversation started</string>
    <string name="acceptance_rate">Acceptance rate:</string>
    <string name="avg_net_price">Average net price:</string>
    <string name="sat_range">SAT range:</string>
    <string name="undergrad_size">Undergraduate size:</string>
    <string name="website">Website:</string>
    <string name="connect_with_students">Connect with students on CoCo now</string>
    <string name="send_location">Send location</string>
    <string name="search_location">Search location</string>
    <string name="location_sent_message">shared a meet-up location</string>
    <string name="location_updated_message">updated the meet-up location</string>
    <string name="send_location_prompt">Search or tap location on map</string>
    <string name="update_location_prompt">Select a location to update</string>
    <string name="update_location">Update location</string>
    <string name="location_sent">Location sent</string>
    <string name="view_photos">View photos</string>
    <string name="album_all">All</string>
    <string name="album_campus">Campus</string>
    <string name="album_dorms">Dorms</string>
    <string name="album_food">Food</string>
    <string name="album_student_life">Student life</string>
    <string name="no_media_message">No photos or videos uploaded yet</string>
    <string name="caption_prompt">(Optional) Write a caption…</string>
    <string name="uploading_to">Uploading to:</string>
    <string name="upload">Upload</string>
    <string name="category">Category:</string>
    <string name="no_colleges_saved_message">You have no colleges saved to your list yet</string>
    <string name="college_column_saved">Saved</string>
    <string name="college_column_safety">Safety</string>
    <string name="college_column_match">Match</string>
    <string name="college_column_reach">Reach</string>
    <string name="college_media_transition_name">collegeMediaTransition</string>
    <string name="channel_id">messages</string>
    <string name="channel_name">Messages</string>
    <string name="channel_description">Notifications for when another user sends a message or shares a meet-up location.</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="college_type">COLLEGE TYPE</string>
    <string name="type_four_year">4-year</string>
    <string name="type_two_year">2-year</string>
    <string name="type_public">Public</string>
    <string name="type_private">Private</string>
    <string name="college_cost">MAX NET COST</string>
    <string name="SAT">SAT</string>
    <string name="ACT">ACT</string>
    <string name="college_cost_hint">MAX NET COST: Select a value</string>
    <string name="sat_slider_hint">SAT: Select a value</string>
    <string name="act_slider_hint">ACT: Select a value</string>
    <string name="college_student_body_size">STUDENT BODY SIZE</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="outgoing_calling">Calling:</string>
    <string name="incoming_call_from">Incoming call from:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="incoming_call_body">Incoming call</string>


    <string-array name="all_albums_array">
        <item>@string/album_all</item>
        <item>@string/album_campus</item>
        <item>@string/album_dorms</item>
        <item>@string/album_food</item>
        <item>@string/album_student_life</item>
    </string-array>

    <string-array name="albums_array">
        <item>@string/album_campus</item>
        <item>@string/album_dorms</item>
        <item>@string/album_food</item>
        <item>@string/album_student_life</item>
    </string-array>

    <string-array name="profile_tabs_array">
        <item>About</item>
        <item>My List</item>
    </string-array>

    <string-array name="college_details_tabs_array">
        <item>Details</item>
        <item>Connect</item>
    </string-array>

    <string-array name="readable_college_categories_array">
        <item>@string/readable_best_colleges_category</item>
        <item>@string/readable_best_academics_category</item>
        <item>@string/readable_best_value_category</item>
        <item>@string/readable_best_student_life_category</item>
        <item>@string/readable_best_CS_category</item>
    </string-array>

    <string-array name="formatted_college_categories_array">
        <item>@string/formatted_best_colleges_category</item>
        <item>@string/formatted_best_academics_category</item>
        <item>@string/formatted_best_value_category</item>
        <item>@string/formatted_best_student_life_category</item>
        <item>@string/formatted_best_CS_category</item>
    </string-array>

    <string name="readable_best_colleges_category">Best colleges</string>
    <string name="readable_best_value_category">Best value</string>
    <string name="readable_best_academics_category">Best academics</string>
    <string name="readable_best_student_life_category">Best student life</string>
    <string name="readable_best_CS_category">Best computer science</string>

    <string name="formatted_best_colleges_category">best-colleges</string>
    <string name="formatted_best_value_category">best-value-colleges</string>
    <string name="formatted_best_academics_category">best-college-academics</string>
    <string name="formatted_best_student_life_category">best-student-life</string>
    <string name="formatted_best_CS_category">best-colleges-for-computer-science</string>

</resources>