<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/etFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from" />

        <EditText
            android:id="@+id/etAcademics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etFrom"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:hint="@string/academics_prompt" />

        <EditText
            android:id="@+id/etExtracurriculars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAcademics"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:hint="@string/extracurriculars_prompt" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account" />

</RelativeLayout>