<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/beige">

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlTypes"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/carter_one"
        android:text="@string/signup"
        android:textColor="@color/dark_brown"
        android:layout_marginBottom="20dp"
        android:textSize="50sp" />

    <RelativeLayout
        android:id="@+id/rlTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tvTypePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/type_prompt" />

        <Button
            android:id="@+id/btnHighSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:layout_below="@id/tvTypePrompt"
            android:text="@string/high_school" />

        <Button
            android:id="@+id/btnCollege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_green"
            android:layout_below="@+id/btnHighSchool"
            android:text="@string/college" />

    </RelativeLayout>

</RelativeLayout>